--- a/ProyectoIpc2/bin/ProyectoIpc2.dll.config
+++ b/ProyectoIpc2/bin/ProyectoIpc2.dll.config
@@ -58,6 +58,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="PlayerContext" connectionString="metadata=res://*/Models.ModelPlayers.csdl|res://*/Models.ModelPlayers.ssdl|res://*/Models.ModelPlayers.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=Player;persist security info=True;user id=SA;password=Josedany1212;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ReversiContext" connectionString="metadata=res://*/Models.ModelReversi.csdl|res://*/Models.ModelReversi.ssdl|res://*/Models.ModelReversi.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ReversiDB;persist security info=True;user id=SA;password=Josedany1212;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
