--- a/ProyectoIpc2/ProyectoIpc2.csproj
+++ b/ProyectoIpc2/ProyectoIpc2.csproj
@@ -272,6 +272,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="App_GlobalResources\" />
     <Folder Include="Views\Jugada\" />
+    <Folder Include="Views\TableroXtreme\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
